--- a/custom_components/berluf_selen_2/manifest.json
+++ b/custom_components/berluf_selen_2/manifest.json
@@ -1,7 +1,9 @@
 {
   "domain": "berluf_selen_2",
   "name": "Berluf Selen 2",
-  "codeowners": [],
+  "codeowners": [
+    "@3p3v"
+  ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/3p3v/hass_berluf_selen_2",
@@ -9,7 +11,7 @@
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/3p3v/hass_berluf_selen_2/issues",
   "requirements": [
-    "berluf_selen_2==0.1.7",
+    "berluf_selen_2_ctrl==0.2.0",
     "pyserial==3.5"
   ],
   "version": "1.0.0"
